- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.6.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x

Fixes:
- delete_item: fixed issue with windows not working properly
- window_size: fixed issue where sizes were a frame late

-----------------------------------------------------------------------
 VERSION 0.6.16
-----------------------------------------------------------------------

Fixes:
- delete_item: fixed issue with windows not working properly

-----------------------------------------------------------------------
 VERSION 0.6.15
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.15

New Keywords:
- plot:               Added "format" keyword
- plot:               Added "y2axis_no_gridlines" keyword
- plot:               Added "y2axis_no_tick_marks" keyword
- plot:               Added "y2axis_no_tick_labels" keyword
- plot:               Added "y2axis_log_scale" keyword
- plot:               Added "y2axis_invert" keyword
- plot:               Added "y2axis_lock_min" keyword
- plot:               Added "y2axis_lock_max" keyword
- plot:               Added "yaxis_no_gridlines" keyword
- plot:               Added "y3axis_no_tick_marks" keyword
- plot:               Added "y3axis_no_tick_labels" keyword
- plot:               Added "y3axis_log_scale" keyword
- plot:               Added "y3axis_invert" keyword
- plot:               Added "y3axis_lock_min" keyword
- plot:               Added "y3axis_lock_max" keyword
- add_area_series:    Added "axis" keyword #318
- add_line_series:    Added "axis" keyword #318
- add_scatter_series: Added "axis" keyword #318
- add_heat_series:    Added "axis" keyword #318
- add_error_series:   Added "axis" keyword #318
- add_pie_series:     Added "axis" keyword #318